# dob-sob

./: .cursorignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FRAUD_DETECTION_RESULTS.md  MODERN_PYTHON_FEATURES.md  README.md  docker-compose.yml  docker.env.example  main.py  prd.txt  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_dashboard.py
.taskmaster/: state.json
.taskmaster/reports/: task-complexity-report.json
config/: datasets.yaml
config/environments/: development.yaml  production.yaml  test.yaml
data/metadata/: acp7_ours_metadata.json  active_dob_8cwf_metadata.json  active_projects_under_construction_metadata.json  active_rats_all_metadata.json  active_rats_jobs_metadata.json  archived_dcwp_charges_metadata.json  archived_dcwp_inspections_metadata.json  asbestos_control_program_acp7_metadata.json  ba2_permits_metadata.json  boiler_gnmg_metadata.json  brooklyn_basement_evictions_metadata.json  bsa_action_portal_metadata.json  bsa_extensions_metadata.json  bsa_lot_35_metadata.json  bureau_fire_prevention_inspections_metadata.json  businesses_dataset_jff5_metadata.json  certificates_of_occupancy_metadata.json  complaints_received_metadata.json  compliance_lead_copper_data_metadata.json  dca_active_licenses_by_category_metadata.json  dca_license_counts_metadata.json  dca_mediated_complaints_metadata.json  dcwp_active_stoop_line_stand_licenses_metadata.json  dcwp_charges_metadata.json  dcwp_consumer_complaints_metadata.json  dcwp_fines_and_fees_historical_metadata.json  dcwp_fines_and_fees_metadata.json  dcwp_inspections_metadata.json  dcwp_issued_licenses_metadata.json  dcwp_license_applications_metadata.json  dcwp_licensed_parking_manhattan_metadata.json  dep_acp7_manhattan_block_828_metadata.json  dob_31_metadata.json  dob_45_metadata.json  dob_4g_metadata.json  dob_92_metadata.json  dob_active_only_metadata.json  dob_alt_i_brooklyn_metadata.json  dob_data_emily_metadata.json  dob_disciplinary_actions_metadata.json  (+55 more)
dob_sob/: __init__.py
dob_sob/api/: fraud_monitoring.py
dob_sob/cli/: __init__.py  main.py
dob_sob/core/: __init__.py  config.py  exceptions.py  models.py
dob_sob/data/: __init__.py
dob_sob/fraud_detection/: __init__.py
dob_sob/neo4j/: load_data.py  setup_schema.py  test_fraud_detection.py
dob_sob/web/: __init__.py
docs/: data_acquisition_orchestration.md  graphiti_cost_analysis.md  graphiti_custom_entity_types.md  llm_response_caching_strategy.md
notebooks/: NYC_DOB_Data_Exploration.ipynb
scripts/: bulk_load.py  neo4j_fraud_detection_prd.txt  reset-db.sh  start.sh  stop.sh
scripts/etl/: data_acquisition.py  metadata_downloader.py  nyc_odata_client.py  orchestrate_data_acquisition.py  test_odata_client.py  test_orchestration_system.py
scripts/fraud_detection/: PROGRESS.md  README.md  __init__.py  (+12 more)
tests/: test_correlation_engine.py
(+24 files in other folders)
